# infamousPlugins

./: .gitignore  CHANGELOG  CMakeLists.txt  CellularAutomationSynth.pro  README  about.html  casynth.c  casynth.h  cell_automation.c  cell_automation.h  constants.h  donate.html  donationthoughts.html  index.html  install.sh  installARCHLINUX.sh  install_no_gui.sh  install_no_sudo.sh  install_no_sudo_part2_run_as_root.sh  main.c  manifest.ttl  note.c  note.h  notelist.c  notelist.h  notes.txt  plugs.html  waves.c  waves.h
casynth.lv2/: casynth.ttl
images/: styles.css
src/: make_bg.c  make_button.c  make_knob_image.c  reindex_ttl.py  rule.c
src/Arpeggiator/: arp.c  arp.pro
src/CellularAutomationSynth/: casynth.c  casynth.h  note.c  note.h  waves.c  waves.h
src/CellularAutomatonSynth/: CMakeLists.txt  CellularAutomatonSynth.pro  casynth.c  casynth.h  casynth.ttl  casynth_ui.fl  casynth_ui_main.cxx  cellgrid.h  constants.h  note.c  note.h  waves.c
src/CheapDistortion/: CMakeLists.txt  CheapDistortion.pro  cheapdist.c  cheapdist_ui.fl  cheapdist_ui_main.cxx
src/Duffer/: Duffer.pro  duffing.c
src/EWham/: EWham.pro  ewham.c  ewham.h  retuner.c  retuner.h
src/EnvelopeFollower/: CMakeLists.txt  EnvelopeFollower.pro  constants.h  envdisplay.h  envfollower.c  envfollower.h  envfollower.ttl  envfollower_ui.fl  envfollower_ui_main.cxx
src/Hip2B/: CMakeLists.txt  Hip2B.pro  hip2b_ui.fl  hip2b_ui_main.cxx  square.c
src/LushLife/: CMakeLists.txt  LushLife.pro  badretuner.c  badretuner.h  c_resampler.cpp  c_resampler.h  c_vresampler.h  lushlife.c  lushlife.cc  lushlife.h  retuner.c  retuner.cc  retuner.h
src/PowerCut/: CMakeLists.txt  PowerCut.pro  powercut.c  powercut.h  powercut_ui.fl  powercut_ui_main.cxx  reel.h
src/PowerUp/: CMakeLists.txt  PowerUp.pro  powerup.c  powerup_ui.fl  powerup_ui_main.cxx  reel.h
src/Sintar/: Sintar.pro  bridge.c  bridge.h  sintar.c  sintar.h  sstring.c  sstring.h  waves.c  waves.h
src/Stuck/: CMakeLists.txt  Stuck.pro  rms_calc.c  rms_calc.h  stuck.c  stuck.h  stuckUI.fl  stuck_ui.cxx  stuck_ui.fl  stuck_ui.h  stuck_ui_main.cxx
src/Stuck/stuck.lv2/: manifest.ttl  stuck.ttl
src/bentdelay/: CMakeLists.txt  bentdelay.ttl  falter.c  falter.h  manifest.ttl
src/casynth/: CMakeLists.txt  casynth.c  casynth.h  casynth.ttl  casynth_presets.ttl  casynth_ui.fl  casynth_ui_main.cxx  cellgrid.h  manifest.ttl  note.c  note.h  waves.c  waves.h
src/cheap_distortion/: Makefile  cheap_distortion.c  cheap_distortion.h  cheap_distortion.prj  install_lv2.sh  manifest.ttl  plugin.c  plugin.h  plugin.ttl
src/cheapdist/: CMakeLists.txt  cheapdist.c  cheapdist.h  cheapdist.ttl  cheapdist_ui.fl  cheapdist_ui_main.cxx  manifest.ttl
src/cheapoct/: CMakeLists.txt  cheapoct.c  cheapoct.h  cheapoct.ttl  manifest.ttl
src/draw/: blur.h  draw_16seg.h  draw_5x7.h  draw_LED.h  draw_blackLEDbutton.h  draw_blueLED.h  draw_casFrames.h  draw_casLabels.h  draw_casbg.h  draw_cheapDial.h  draw_cheapLabels.h  draw_envLabels.h  draw_envScopes.h  draw_envfollowerbg.h  draw_flatDial.h  draw_hal.h  draw_hip2bg.h  draw_infamousLogo.h  draw_infamousLogoBW.h  draw_infamousLogoTiny.h  draw_infamousLogoTrans.h  draw_ivoryDial.h  draw_ivorySlider.h  draw_lushGraphPoint.h  draw_lushGraphX2Bound.h  draw_lushGraphXBound.h  draw_lushGraphY2Bound.h  draw_lushGraphYBound.h  draw_lushLabels.h  draw_lushbg.h  draw_lushbgnd.h  draw_lushgraphpoint.h  draw_lushgraphx2bound.h  draw_lushgraphxbound.h  draw_lushgraphy2bound.h  draw_lushgraphybound.h  draw_powerButton.h  draw_powerbg.h  draw_pwrLabels.h  draw_redDial.h  (+14 more)
src/duffer/: CMakeLists.txt  c_resampler.h  c_vresampler.h  duffer.ttl  duffing.c  manifest.ttl  rk4.c  rk4.h
src/envfollower/: CMakeLists.txt  envbounds.h  envdisplay.h  envfollower.c  envfollower.h  envfollower.ttl  envfollowerCV_ui.fl  envfollower_ui.fl  envfollower_ui_main.cxx  manifest.ttl  rms_calc.c
src/ewham/: CMakeLists.txt  ewham.c  ewham.ttl  manifest.ttl  retuner.c  retuner.h
src/ewham/modgui/: manifest.ttl
src/ewham/modgui/modgui/: icon-the-infamous-ewham.html  stylesheet-the-infamous-ewham.css
src/falter/: CMakeLists.txt  falter.c  falter.h  falter.ttl  manifest.ttl
src/ffffltk/: README  ffffltk.h  ffffltk_aspect_group.h  ffffltk_background.h  ffffltk_button.h  ffffltk_dial.h  ffffltk_display.h  ffffltk_input.h  ffffltk_scope.h  ffffltk_xy.h  svg2cairo.sh
src/hip2b/: CMakeLists.txt  hip2b.h  hip2b.ttl  hip2b_presets.ttl  hip2b_ui_main.cxx  manifest.ttl  square.c
src/lushlife/: CMakeLists.txt  graph.h  lfo.cc  lfo.h  lushlife.cc  lushlife.h  lushlife.ttl  lushlife_presets.ttl  lushlife_ui.fl  lushlife_ui_main.cxx  manifest.ttl  retuner.cc  retuner.h  xybounds.h
src/mindi/: CMakeLists.txt  manifest.ttl  mindi.c  mindi.h  mindi.ttl
src/octolo/: CMakeLists.txt  Library_3_am.h  manifest.ttl  meson.build  octolo.c  octolo.h  octolo.ttl  octolo_presets.ttl  octolo_ui.c  tikloo
src/pms/: CMakeLists.txt  manifest.ttl  pms.c  pms.h  pms.ttl
src/powercut/: CMakeLists.txt  manifest.ttl  powercut.c  powercut.h  powercut.ttl  powercut_ui.fl  powercut_ui_main.cxx  reel.h
src/powerup/: CMakeLists.txt  manifest.ttl  powerup.c  powerup.h  powerup.ttl  powerup_ui.fl  powerup_ui_main.cxx  reel.h
src/qsvgui/: LCD.cpp  LCD.h  form.h  globals.h  main.cpp  pedal.cpp  pedal.h  preview.cpp  preview.h  qsvgbutton.cpp  qsvgbutton.h  qsvgdial.cpp  qsvgdial.h  qsvgled.cpp  qsvgled.h  qsvgmeter.cpp  qsvgmeter.h  (+8 more)
src/tikloo/: CMakeLists.txt  bin2c.c  meson.build  tk.h  tk_default_draw.h  tk_main.c  tk_test.h  tk_types.h
src/tikloo/default_draw/: draw_bg.c  draw_blackLEDbutton.c  draw_dial.c  draw_text.c
src/tikloo/tikloo/: CMakeLists.txt  csleep.h  timer.c  timer.h  tk.h  tk_default_draw.h  tk_main.c  tk_test.h  tk_types.h
src/tikloo/tikloo/default_draw/: draw_bg.c  draw_blackLEDbutton.c  draw_dial.c  draw_text.c
src/tikloo/tikloo/fonts/: LibraSerifModern_Regular.h
test/: ffmpeg-2.4.2-jack.patch  ffthing.m  fltr.m  plotIREQ.m  schrodercascade.m  sine_seeker.c  spring.m  test.cxx  test.fl  test.h  test_main.cxx  testmin.c  wave_test.c  waves.h  zpmapping.m
(+50 files in other folders)
